<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/margin_large"
    android:layout_marginEnd="@dimen/margin_large"
    tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="148dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_textview_security_title"
                style="@style/TextSubHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/settings_textview_security_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/settings_questions_current_inputlayout"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_editText_current_password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/settings_password_current"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_security_question_one_title"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/settings_textview_security_question_one" />

            <EditText
                android:id="@+id/settings_security_question_one_input"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:ems="10"
                android:hint="@string/settings_editText_hint_one"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_security_answer_one_input"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:ems="10"
                android:hint="@string/settings_editText_security_answer_one"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_security_question_two_title"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/settings_textview_security_question_two" />

            <EditText
                android:id="@+id/settings_security_question_two_input"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:ems="10"
                android:hint="@string/settings_editText_hint_two"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_security_answer_two_input"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:ems="10"
                android:hint="@string/settings_editText_security_answer_two"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/settings_submit_questions"
                style="@style/TextButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/settings_button_submit" />
        </LinearLayout>
</LinearLayout>