<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings_reset_option"
        android:title="@string/settings_password_reset_title" />

    <item
        android:id="@+id/settings_questions_option"
        android:title="@string/settings_textview_security_title" />

</menu>
